add notes for section2

--- a/notes/section1/ep03_Why_Do_We_Need_MCP.ipynb
+++ b/notes/section1/ep03_Why_Do_We_Need_MCP.ipynb
@@ -14,8 +14,9 @@
    "id": "11578ec8",
    "metadata": {},
    "source": [
-    "And the idea here is that we are going to integrate only once into our MCP server. And because all the other agents support MCP, the model Context protocol, then they will be able to easily connect to our MCP server, and in fact, we'll only need to implement our agent once with compatibility to the MCP server. And then we can migrate to all those other agents which supports the MCP protocol.\n",
+    "And the idea here is that we are going to integrate only once into our MCP server. And because all the other agents support MCP, the model Context protocol, then they will be able to easily connect to our MCP server, and in fact, we'll only need to implement our agent once with compatibility to the MCP server.\n",
     "\n",
+    "then we can migrate to all those other agents to MCP server.<br>\n",
     "So, everyone who supports the MCP protocol can use our agent and we can integrate it seamlessly.\n",
     "\n",
     "because so many people are using it right now, and there are tons of MCP servers out there. And really the possibilities are endless.\n"
