add notes for section3

--- a/notes/section1/ep03_Why_Do_We_Need_MCP.ipynb
+++ b/notes/section1/ep03_Why_Do_We_Need_MCP.ipynb
@@ -11,6 +11,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9600242c",
+   "metadata": {},
+   "source": [
+    "MCP supposed to standardize how applications provide context/resources to llms.<br>\n",
+    "the context can be additional information to the prompt. A context can be maybe which tool to invoke. And a context can even be the prompt itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0f32355",
+   "metadata": {},
+   "source": [
+    "more generally MCP servers can provide three main types of capabilities:\n",
+    "\n",
+    "- Resources: File-like data that can be read by clients (like API responses or file contents)\n",
+    "- Tools: Functions that can be called by the LLM (with user approval)\n",
+    "- Prompts: Pre-written templates that help users accomplish specific tasks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11578ec8",
    "metadata": {},
    "source": [
@@ -33,13 +54,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langchain",
+   "display_name": "farzanehlang",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.13"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
